Fixing spacing issues on friends and friend request pages

--- a/app/assets/stylesheets/friendships.scss
+++ b/app/assets/stylesheets/friendships.scss
@@ -3,5 +3,6 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
 .friend-card {
-    max-height: 35vh;
+    max-height: 15rem;
+    margin-bottom: 1.5rem;
 }
